--- a/tests/Makefile
+++ b/tests/Makefile
@@ -22,11 +22,12 @@ PROJECT= `pwd`
 ##
 LUA_FILTER_BASE = /usr/local/share/lua/5.3/pandocker
 PANFLAGS =
-PANFLAGS += --lua-filter=../lua/preprocess.lua
 PANFLAGS += $(MISC)/$(CONFIG)
 PANFLAGS += $(MDDIR)/$(CONFIG)
-#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/default_loader.lua
-#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-unnumberedheadings.lua
-#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
+PANFLAGS += --lua-filter=../lua/preprocess.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/default_loader.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-unnumberedheadings.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
+PANFLAGS += --filter=pandoc-crossref
 
 include $(MISC)/Makefile
