--- a/tests/.circleci/config.yml
+++ b/tests/.circleci/config.yml
@@ -2,32 +2,32 @@ version: 2
 jobs:
   build:
     docker:
-    - image: k4zuki/pandocker
+      - image: k4zuki/pandocker:lua-filter
     steps:
-    - checkout
-    - run:
-        name: get submodule
-        command: git submodule update --init
-    - run:
-        name: Prepare QR code for this build
-        command: |
-          make initdir
-          pip3 install qrcode
-        #          qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-`date +%b-%d-%Y`-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
-    - run:
-        name: Make HTML
-        command: make initdir html
-    - run:
-        name: Make PDF
-        command: make initdir pdf
+      - checkout
+      - run:
+          name: get submodule
+          command: git submodule update --init
+      - run:
+          name: Prepare QR code for this build
+          command: |
+            make initdir
+            pip3 install qrcode
+          #          qr https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/releases/download/build-`date +%b-%d-%Y`-`git rev-parse --short HEAD`/Pandocker-Docs-`git rev-parse --short HEAD`.pdf > images/QRcode.png
+      - run:
+          name: Make HTML
+          command: make initdir html
+      - run:
+          name: Make PDF
+          command: make initdir pdf
 
-    - run:
-        name: Deploy preparation
-        command: |
-          mkdir deploy
-          mv Out/*.html deploy/`basename Out/*.html .html`-`git rev-parse --short HEAD`.html
-          mv Out/*.pdf deploy/`basename Out/*.pdf .pdf`-`git rev-parse --short HEAD`.pdf
-    - run:
-        name: Deploy
-        command: |
-          ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME build-`date +%b-%d-%Y`-`git rev-parse --short HEAD` deploy/
+      - run:
+          name: Deploy preparation
+          command: |
+            mkdir deploy
+            mv tests/Out/*.html deploy/`basename tests/Out/*.html .html`-`git rev-parse --short HEAD`.html
+            mv tests/Out/*.pdf deploy/`basename tests/Out/*.pdf .pdf`-`git rev-parse --short HEAD`.pdf
+      - run:
+          name: Deploy
+          command: |
+            ghr -replace -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME build-`date +%b-%d-%Y`-`git rev-parse --short HEAD` deploy/
