--- a/tests/Makefile
+++ b/tests/Makefile
@@ -31,8 +31,8 @@ PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/preprocess.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-pagebreak-toc.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-unnumberedheadings.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
-PANFLAGS += ../lua/wavedrom.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgconvert.lua
+PANFLAGS += --lua-filter=../lua/wavedrom.lua
+PANFLAGS += --lua-filter=../lua/svgconvert.lua
 PANFLAGS += --filter=pandoc-crossref
 #PFLAGS += $(PANFLAGS)
 #PANFLAGS = $(PFLAGS)
