update testing data and Makefile
- add metadata
- use local lua files

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -27,16 +27,15 @@ LUA_FILTER_BASE = $(PIPBASE)/share/lua/5.3/pandocker
 PANFLAGS =
 PANFLAGS += $(MISC_SYS)/$(CONFIG)
 PANFLAGS += $(MDDIR)/$(CONFIG)
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/default_loader.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-landscape.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/preprocess.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/removable-note.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-pagebreak-toc.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-unnumberedheadings.lua
+PANFLAGS += --lua-filter=../lua/tex-landscape.lua
+PANFLAGS += --lua-filter=../lua/preprocess.lua
+PANFLAGS += --lua-filter=../lua/removable-note.lua
+PANFLAGS += --lua-filter=../lua/docx-pagebreak-toc.lua
+PANFLAGS += --lua-filter=../lua/docx-unnumberedheadings.lua
 PANFLAGS += --lua-filter=../lua/docx-extract-bullet-lists.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
+PANFLAGS += --lua-filter=../lua/listingtable.lua
 PANFLAGS += --lua-filter=../lua/wavedrom.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgconvert.lua
+PANFLAGS += --lua-filter=../lua/svgconvert.lua
 PANFLAGS += --filter=pandoc-crossref
 #PFLAGS += $(PANFLAGS)
 #PANFLAGS = $(PFLAGS)
