update lua files and default metadata
- improve output messages
- add/improve header docstrings

--- a/lua/metadata-file.yaml
+++ b/lua/metadata-file.yaml
@@ -9,7 +9,7 @@ publisher: 印刷会社で印刷製本
 docrevision: "1.0"
 front: images/front-image.png
 verbcolored: false
-rmnote:
+rmnote: false
 
 svgbob:
   font-family: "Source Code Pro"
