update preprocess.lua; update testing files
- loads metadata `include` from source; if not found applies default

--- a/lua/metadata-file.yaml
+++ b/lua/metadata-file.yaml
@@ -1,6 +1,8 @@
 ---
 rmnote: false
 
+include: []
+
 tex-rowcolors: "\\\\rowcolors{3}{white!100!white}{table-gray!100!white!100}"
 
 lgeometry: "top=20truemm,bottom=20truemm,left=20truemm,right=20truemm"
