add docx-image-styles.lua; update metadata-file.yaml

--- a/lua/metadata-file.yaml
+++ b/lua/metadata-file.yaml
@@ -17,4 +17,8 @@ bullet-style:
   1: "Bullet List 1"
   2: "Bullet List 2"
   3: "Bullet List 3"
+
+figure-styles:
+  anchor: "Graphic Anchor"
+  caption: "Figure Caption"
 ...
