add tex-remove-sout.lua to remove strikeout which causes problem with latex; update tests/Makefile to reflect change

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -45,6 +45,7 @@ PANFLAGS += --filter=pandoc-imagine
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgconvert.lua
 PANFLAGS += --filter=pandocker-filters
 PANFLAGS += --filter=pandoc-docx-extract-bullet-list
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-remove-sout.lua
 PANFLAGS += --filter=pandoc-crossref
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-image-styles.lua
 #PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-rowcolors-reset.lua
