--- a/lua/metadata-file.yaml
+++ b/lua/metadata-file.yaml
@@ -12,6 +12,7 @@ heading-unnumbered:
   2: "Heading Unnumbered 2"
   3: "Heading Unnumbered 3"
   4: "Heading Unnumbered 4"
+  5: "Heading Unnumbered 5"
 
 bullet-style:
   1: "Bullet List 1"
