update docx-custom-span-styles.lua; update tests
- fix metadata handler
- add default-paragraph-font metadata entry

--- a/tests/markdown/config.yaml
+++ b/tests/markdown/config.yaml
@@ -58,6 +58,9 @@ docx_coreprop:
 #    "Normal": "Body Text"
 #    "First Paragraph": "Body Text"
 
+custom-spans:
+  default-paragraph-font: "Default Paragraph Font"
+
 table-cell-styles:
   header-default: "Table Header Left"
   header-left: "Table Header Left"
