--- a/tests/Makefile
+++ b/tests/Makefile
@@ -36,17 +36,18 @@ PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/csv2table.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/wavedrom.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-underline.lua
-PANFLAGS += --filter=pantable
+#PANFLAGS += --filter=pantable
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/table-width.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-apply-cell-styles.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-custom-span-styles.lua
-PANFLAGS += --filter=pandocker-blockdiag-filters
-PANFLAGS += --filter=pandoc-svgbob-filter
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-extract-bullet-lists.lua
+#PANFLAGS += --filter=pandocker-blockdiag-filters
+#PANFLAGS += --filter=pandoc-svgbob-filter
 PANFLAGS += --filter=pandoc-imagine
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgconvert.lua
-PANFLAGS += --filter=pandocker-filters
-PANFLAGS += --filter=pandoc-docx-extract-bullet-list
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-remove-sout.lua
+#PANFLAGS += --filter=pandocker-filters
+#PANFLAGS += --filter=pandoc-docx-extract-bullet-list
+#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-remove-sout.lua
 PANFLAGS += --filter=pandoc-crossref
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-image-styles.lua
 #PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-rowcolors-reset.lua
