--- a/tests/markdown/config.yaml
+++ b/tests/markdown/config.yaml
@@ -16,7 +16,7 @@ svgbob:
   font-family: "Source Code Pro"
   font-size: 14
   scale: 1
-  strike-width: 2
+  stroke-width: 2
 
 heading-unnumbered:
   1: "Heading Unnumbered 1"
