--- a/lua/metadata-file.yaml
+++ b/lua/metadata-file.yaml
@@ -46,4 +46,10 @@ table-cell-styles:
   body-left: "Table Body Left"
   body-center: "Table Body Center"
   body-right: "Table Body Right"
+
+svgbob:
+  font-family: "Arial"
+  font-size: 14
+  scale: 1
+  stroke-width: 2
 ...
