svgbob target points to svgbob local image

--- a/.github/workflows/sdist.yaml
+++ b/.github/workflows/sdist.yaml
@@ -17,7 +17,8 @@ jobs:
           images: joseluisq/rust-linux-darwin-builder
           options: -v $(PWD):/tmp -w /tmp ./scripts/svgbob.sh
       - name: build svgbob
-        run: make svgbob
+        run: |
+          docker build scripts/ -t svgbob
       - name: build wheel
         run: make wheel
       - name: upload to testpypi (at a push)
