update workflow - rename; on push and create

--- a/.github/workflows/wheel.yaml
+++ b/.github/workflows/wheel.yaml
@@ -1,9 +1,5 @@
 name: Build python wheel package
-on:
-  push:
-    branches:
-      - sdist-test
-      - master
+on: [push, create]
 jobs:
   make-wavedrom:
     name: Compile svgbob
