--- a/.github/workflows/wheel.yaml
+++ b/.github/workflows/wheel.yaml
@@ -23,7 +23,7 @@ jobs:
           name: wheel package
           path: dist
       - name: Upload to pypi (at a tag)
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         with:
           user: ${{ secrets.PYPI_USERNAME }}
