--- a/tests/Makefile
+++ b/tests/Makefile
@@ -38,6 +38,7 @@ PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/wavedrom.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgbob.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-quote.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-colored-span.lua
 #PANFLAGS += --filter=pantable
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/table-width.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-apply-cell-styles.lua
