--- a/tests/Makefile
+++ b/tests/Makefile
@@ -27,35 +27,36 @@ PROJECT= `pwd`
 LUA_FILTER_BASE = ../lua
 PANFLAGS := --read=markdown+east_asian_line_breaks
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/hide-frontpage-metadata.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/aafigure.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/removable-note.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-landscape.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/preprocess.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-landscape.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-unnumberedheadings.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-appendixheadings.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-pagebreak-toc.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/csv2table.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/csv2table-simple.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/listingtable.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/aafigure.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/wavedrom.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgbob.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-quote.lua
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-colored-span.lua
 #PANFLAGS += --filter=pantable
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/table-width.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/table-width-simple.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-apply-cell-styles.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-colored-span.lua
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-custom-span-styles.lua
 #PANFLAGS += --filter=pandocker-blockdiag-filters
 #PANFLAGS += --filter=pandoc-svgbob-filter
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgbob.lua
 PANFLAGS += --filter=pandoc-imagine
 PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/svgconvert.lua
 #PANFLAGS += --filter=pandocker-filters
-PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-extract-bullet-lists.lua
 #PANFLAGS += --filter=pandoc-docx-extract-bullet-list
-#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-remove-sout.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-extract-bullet-lists.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/removable-note.lua
 PANFLAGS += --filter=pandoc-crossref
-#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-image-styles.lua
+PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/docx-image-styles.lua
 #PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-rowcolors-reset.lua
+#PANFLAGS += --lua-filter=$(LUA_FILTER_BASE)/tex-remove-sout.lua
 PANFLAGS += --listings
 PANFLAGS += --top-level-division=chapter
 PANFLAGS += --number-sections --highlight-style=kate
